<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>pl.wsztajerowski</groupId>
    <artifactId>systematic-concurrency-testing-demos</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>00-lamport</module>
        <module>01-lamport-volatile</module>
        <module>02-lamport-single-thread</module>
        <module>03-lamport-lock</module>
        <module>04-contract-tests</module>
        <module>05-fray</module>
        <module>06-jcstress</module>
    </modules>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.jupiter.version>5.12.1</junit.jupiter.version>
        <assertj.version>3.27.3</assertj.version>
        <fray.version>0.8.5</fray.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.pastalab.fray</groupId>
                <artifactId>fray-junit</artifactId>
                <version>${fray.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.pastalab.fray</groupId>
                <artifactId>fray-core</artifactId>
                <version>${fray.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.pastalab.fray</groupId>
                <artifactId>fray-runtime</artifactId>
                <version>${fray.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.pastalab.fray.maven</groupId>
                    <artifactId>fray-plugins-maven</artifactId>
                    <version>${fray.version}</version>
                    <executions>
                        <execution>
                            <id>prepare-fray</id>
                            <phase>none</phase>
                            <goals>
                                <goal>prepare-fray</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>